WOrking Medical ABstract before gatewat

--- a/src/app/tab-dashboard/tab-dashboard.page.html
+++ b/src/app/tab-dashboard/tab-dashboard.page.html
@@ -7,7 +7,7 @@
         <ion-icon
           [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'"
           style="float: right"
-          id="click-triggerr"
+          (click)="toggleMenu()"
           size="large">
         </ion-icon>
 
