--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -6,7 +6,7 @@
         <ion-icon
           [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'"
           style="float: right"
-          id="click-triggerrr"
+          (click)="toggleMenu()"
           size="large">
         </ion-icon>
 
