--- a/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
@@ -153,4 +153,48 @@
       </ion-item>
     </ion-card>
   </div>
+  <ng-container>
+    <div class="ion-padding custom-skeleton">
+      <ion-card mode="ios" class="pointer">
+        <ion-item lines="none">
+          <ion-label style="margin-top: -10px">
+            <ion-item class="ion-no-padding" style="padding-bottom: 5px">
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-item>
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </ion-label>
+        </ion-item>
+      </ion-card>
+      <ion-card mode="ios" class="pointer">
+        <ion-item lines="none">
+          <ion-label style="margin-top: -10px">
+            <ion-item class="ion-no-padding" style="padding-bottom: 5px">
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-item>
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </ion-label>
+        </ion-item>
+      </ion-card>
+      <ion-card mode="ios" class="pointer">
+        <ion-item lines="none">
+          <ion-label style="margin-top: -10px">
+            <ion-item class="ion-no-padding" style="padding-bottom: 5px">
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-item>
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </ion-label>
+        </ion-item>
+      </ion-card>
+      <ion-card mode="ios" class="pointer">
+        <ion-item lines="none">
+          <ion-label style="margin-top: -10px">
+            <ion-item class="ion-no-padding" style="padding-bottom: 5px">
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-item>
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </ion-label>
+        </ion-item>
+      </ion-card>
+    </div>
+  </ng-container>
 </ion-content>
