added working signature

--- a/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
@@ -29,6 +29,15 @@
   </div>
 </ion-header>
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
+    <ion-refresher-content
+      pullingIcon="chevron-down-circle-outline"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
+
   <!--button (click)="generatePDF()">Generate PDF</button-->
   <ion-grid class="ion-no-padding">
     <ion-row>
