added login reactive form

--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -90,6 +90,7 @@
                     color="mango"
                     shape=""
                     expand="block"
+                    *ngIf="!isUploaded"
                     >Sign and Approve
                   </ion-button>
                 </ion-col>
