--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -24,36 +24,100 @@
   <div class="wrapper">
     <ion-grid>
       <ion-row>
-        <ion-col size-lg="4" offset-lg="4 " size-md="6" offset-md="3" size-sm="6" offset-sm="3" size="12"
+        <ion-col
+          size-lg="4"
+          offset-lg="4 "
+          size-md="6"
+          offset-md="3"
+          size-sm="6"
+          offset-sm="3"
+          size="12"
           class="my-custom-slider">
           <ion-card class="form-wrapper">
             <img src="assets/img/orgwide-png.png" />
             <ion-card-content>
+              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <ion-item>
+                  <ion-icon name="mail"></ion-icon>
+                  <ion-input
+                    type="text"
+                    formControlName="userNameOrEmail"></ion-input>
+                </ion-item>
+                <ion-item
+                  *ngIf="loginForm.get('userNameOrEmail').invalid && loginForm.get('userNameOrEmail').touched">
+                  <ion-text color="danger">Username is required.</ion-text>
+                </ion-item>
 
+                <ion-item>
+                  <ion-icon name="lock-closed"></ion-icon>
+                  <ion-input
+                    type="password"
+                    id="input-password"
+                    formControlName="password"
+                    autocomplete="off"
+                    [type]="getType()"
+                    id="passwordInput"
+                    #passwordInput
+                    (keyup.enter)="checkInput()"></ion-input>
+                  <ion-icon
+                    name="eye-off-outline"
+                    [name]="getName()"
+                    item-right
+                    (click)="showPassword()"
+                    autocomplete="off"
+                    class="rectangle"></ion-icon>
+                </ion-item>
+                <ion-item
+                  *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched">
+                  <ion-text color="danger">Password is required.</ion-text>
+                </ion-item>
 
-
-
-              <ion-item style="margin-top:-10px">
+                <ion-button
+                  expand="block"
+                  type="submit"
+                  [disabled]="loginForm.invalid"
+                  ><span *ngIf="!btnDisable">Submit</span>
+                  <ion-spinner *ngIf="btnDisable"></ion-spinner
+                ></ion-button>
+              </form>
+            </ion-card-content>
+            <ion-card-content>
+              <!--ion-item style="margin-top: -10px">
                 <ion-icon name="mail"></ion-icon>
-                <ion-input type="text" placeholder="Username or Email" id="input-username"
+                <ion-input
+                  type="text"
+                  placeholder="Username or Email"
+                  id="input-username"
                   [(ngModel)]="postData.username">
                 </ion-input>
               </ion-item>
               <ion-item>
                 <ion-icon name="lock-closed"></ion-icon>
-                <ion-input type="password" placeholder="Password" id="input-password" [type]="getType()"
-                  (keyup.enter)="checkInput()" [(ngModel)]="postData.password">
+                <ion-input
+                  type="password"
+                  placeholder="Password"
+                  [type]="getType()"
+                  (keyup.enter)="checkInput()"
+                  [(ngModel)]="postData.password">
                 </ion-input>
-                <ion-icon name="eye-off-outline" [name]="getName()" item-right (click)="showPassword()"
+                <ion-icon
+                  name="eye-off-outline"
+                  [name]="getName()"
+                  item-right
+                  (click)="showPassword()"
                   class="rectangle"></ion-icon>
               </ion-item>
-              <ion-button expand="block" id="btn-confirm" (click)="checkInput()" disabled="{{btnDisable}}">
+              <ion-button
+                expand="block"
+                id="btn-confirm"
+                (click)="checkInput()"
+                disabled="{{btnDisable}}">
                 <div *ngIf="!btnDisable">
                   {{this.constants.UI_COMPONENT_TEXT__VALUE__LOGIN.toUpperCase()}}
                 </div>
                 <span *ngIf="!btnDisable"></span>
                 <ion-spinner *ngIf="btnDisable"></ion-spinner>
-              </ion-button>
+              </ion-button-->
 
               <br />
               <p align="center" class="fontSize-12" (click)="forgotpassword()">
@@ -72,7 +136,8 @@
           </div>
           <div class="ion-text-center fontSize-12">
             <b>
-              <a href="tel: +63322338000">{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}
+              <a href="tel: +63322338000"
+                >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}
               </a>
             </b>
           </div>
@@ -83,19 +148,13 @@
           </div>
         </ion-col>
       </ion-row>
-
     </ion-grid>
-
-
-
-
-
-
-
   </div>
 </ion-content>
 <ion-footer class="ion-no-border">
   <ion-item lines="none" class="fontSize-12">
-    <ion-label class="ion-text-center">( Made by Chong Hua Hospital for Chong Hua Hospital )</ion-label>
+    <ion-label class="ion-text-center"
+      >( Made by Chong Hua Hospital for Chong Hua Hospital )</ion-label
+    >
   </ion-item>
 </ion-footer>
