--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -76,7 +76,7 @@
                   expand="block"
                   type="submit"
                   [disabled]="loginForm.invalid"
-                  ><span *ngIf="!btnDisable">Submit</span>
+                  ><span *ngIf="!btnDisable">Login</span>
                   <ion-spinner *ngIf="btnDisable"></ion-spinner
                 ></ion-button>
               </form>
