added case rates search outside. opened medical abstract

--- a/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
@@ -60,7 +60,7 @@
       mode="ios"
       class="pointer custom-card"
       [attr.data-testid]="x.admission_no"
-      (click)="detail(x.patient_No,x.account_No)">
+      (click)="detail(x.patient_No,x.account_No,x)">
       <ion-item lines="none">
         <ion-label style="margin-top: -15px">
           <ion-item slot="start" class="ion-no-padding">
