--- a/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
@@ -87,7 +87,7 @@
           <ion-item>
             <ion-grid>
               <ion-row>
-                <ion-col size="6">
+                <!--ion-col size="6">
                   <ion-button
                     (click)="openConsent()"
                     *ngIf="medicalAbstractList.abstract_Approve_By ==''"
@@ -98,7 +98,7 @@
                     expand="block"
                     >Sign and Approve
                   </ion-button>
-                </ion-col>
+                </ion-col-->
                 <ion-col
                   *ngIf="medicalAbstractList.abstract_Approve_By !=''"
                   size="12">
