--- a/src/app/pages/executuve/tab-caserates/tab-caserates.page.html
+++ b/src/app/pages/executuve/tab-caserates/tab-caserates.page.html
@@ -4,8 +4,11 @@
       <ion-title>
         <ion-icon name="file-tray-full-outline"></ion-icon> Case Rates
       </ion-title>
-      <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
-        <ion-button (click)="settings()">&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
+      <ion-buttons
+        slot="end"
+        class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
+        <ion-button (click)="settings()"
+          >&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
         </ion-button>
       </ion-buttons>
     </ion-toolbar>
@@ -13,22 +16,15 @@
 </ion-header>
 <!-- <app-chh-app-desktop-navigation *ngIf="isDesktop"></app-chh-app-desktop-navigation> -->
 <ion-content>
-
-
-
-
-
   <ion-grid class="ion-no-padding">
     <ion-row class="custom-padding">
-      <ion-col size-md="8" offset-md="2" size-lg="6" offset-lg="3" class="custom-border-bottom ion-no-border ">
-
-
+      <ion-col
+        size-md="8"
+        offset-md="2"
+        size-lg="6"
+        offset-lg="3"
+        class="custom-border-bottom ion-no-border">
         <ion-grid>
-
-
-
-
-
           <!--ion-list>
             <ion-item *ngFor="let x of caseRateResponse_first">
               <ion-label>
@@ -43,26 +39,6 @@
             </ion-item>
           </ion-list-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
           <div class="custom-skeleton" *ngIf="ionSkeleton">
             <ion-list>
               <ion-item>
@@ -71,10 +47,14 @@
                     <ion-skeleton-text animated></ion-skeleton-text>
                   </h2>
                   <h3 class="ion-text-wrap">
-                    <ion-skeleton-text animated style="width: 88%"></ion-skeleton-text>
+                    <ion-skeleton-text
+                      animated
+                      style="width: 88%"></ion-skeleton-text>
                   </h3>
                   <h3 class="ion-text-wrap">
-                    <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+                    <ion-skeleton-text
+                      animated
+                      style="width: 70%"></ion-skeleton-text>
                   </h3>
                 </ion-label>
               </ion-item>
@@ -83,20 +63,24 @@
               <ion-item>
                 <ion-label>
                   <h2 class="ion-text-wrap">
-                    <ion-skeleton-text animated style="width: 40%"></ion-skeleton-text>
+                    <ion-skeleton-text
+                      animated
+                      style="width: 40%"></ion-skeleton-text>
                   </h2>
                   <h3 class="ion-text-wrap">
-                    <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+                    <ion-skeleton-text
+                      animated
+                      style="width: 30%"></ion-skeleton-text>
                   </h3>
                   <h3 class="ion-text-wrap">
-                    <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+                    <ion-skeleton-text
+                      animated
+                      style="width: 70%"></ion-skeleton-text>
                   </h3>
                 </ion-label>
               </ion-item>
             </ion-list>
           </div>
-
-
 
           <div *ngIf="ionNoData">
             <ion-grid>
@@ -112,8 +96,6 @@
             </ion-grid>
           </div>
 
-
-
           <div *ngIf="ionStart">
             <div class="ion-text-center">
               <img src="assets/img/hunt-rafiki.png" alt="Search" />
@@ -124,7 +106,9 @@
             <ion-item *ngFor="let x of caseRate">
               <ion-label>
                 <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
-                <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
+                <h3 class="ion-text-wrap" slot="end">
+                  Case Code : {{x.case_code}}
+                </h3>
                 <ion-badge>
                   <h3 class="ion-text-wrap">
                     <b>PF : {{x.case_pf }}</b>
@@ -134,14 +118,13 @@
             </ion-item>
           </ion-list>
         </ion-grid>
-
-
-
       </ion-col>
     </ion-row>
   </ion-grid>
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
@@ -224,9 +207,17 @@
 <ion-footer class="ion-no-border" color="mango">
   <ion-grid class="ion-no-padding">
     <ion-row class="custom-padding">
-      <ion-col size-md="8" offset-md="2" size-lg="6" offset-lg="3" class="custom-border-bottom ion-no-border ">
+      <ion-col
+        size-md="8"
+        offset-md="2"
+        size-lg="6"
+        offset-lg="3"
+        class="custom-border-bottom ion-no-border">
         <ion-grid>
-          <ion-segment (ionChange)="segmentChanged($event)" mode="ios" [(ngModel)]="caseRateData.case_class"
+          <ion-segment
+            (ionChange)="segmentChanged($event)"
+            mode="ios"
+            [(ngModel)]="caseRateData.case_class"
             color="mango">
             <ion-segment-button value="first">
               <ion-label>1st Case</ion-label>
@@ -237,19 +228,33 @@
           </ion-segment>
           <ion-item>
             <ion-label position="floating">Code : </ion-label>
-            <ion-input [(ngModel)]="caseRateData.case_code" id="input-code"></ion-input>
+            <ion-input
+              [(ngModel)]="caseRateData.case_code"
+              id="input-code"></ion-input>
           </ion-item>
 
           <ion-item>
-            <ion-label position="floating" [class.activedescription]="activedescription">Description :
+            <ion-label
+              position="floating"
+              [class.activedescription]="activedescription"
+              >Description :
             </ion-label>
-            <ion-input [(ngModel)]="caseRateData.case_desc" id="input-searchdesc"></ion-input>
+            <ion-input
+              [(ngModel)]="caseRateData.case_desc"
+              id="input-searchdesc"></ion-input>
           </ion-item>
           <ion-grid class="ion-no-padding">
             <ion-row>
               <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
               <ion-col size-xs="12" size-md="4" size-lg="4">
-                <ion-button color="mango" size="default" expand="block" shape="round" (click)="search()">Search
+                <ion-button
+                  color="mango"
+                  size="default"
+                  expand="block"
+                  shape="round"
+                  (click)="search()"
+                  ><span *ngIf="!isLoading">Search</span>
+                  <ion-spinner *ngIf="isLoading"></ion-spinner>
                 </ion-button>
               </ion-col>
               <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
