back on the build

--- a/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
@@ -21,10 +21,10 @@
           size-lg="4"
           offset-lg="4"
           class="custom-border-bottom ion-no-border custom-padding">
-          <!--chh-app-hospital
+          <chh-app-hospital
             (hospital)="locationAction($event)"
             [Activator]="site"
-            readonlyComp="false"></chh-app-hospital-->
+            readonlyComp="false"></chh-app-hospital>
         </ion-col>
       </ion-row>
       <ion-row class="">
