updated medical abstract if no data found

--- a/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
@@ -54,7 +54,9 @@
       refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
-
+  <ion-card *ngIf="!isSearching && medicalAbstractList == ''">
+    <ion-item lines="none">No Medical Abstract Found</ion-item>
+  </ion-card>
   <div *ngFor="let x of medicalAbstractList">
     <ion-card
       mode="ios"
