--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -58,9 +58,7 @@
             <div
               *ngIf="x.imageUrl != ''"
               class="use-cover-background square"
-              style="background-image: url({{x.imageUrl}})">
-              111
-            </div>
+              style="background-image: url({{x.imageUrl}})"></div>
 
             <ion-card-header>
               <ion-card-title class="ion-text-wrap">{{x.title}}</ion-card-title>
