--- a/src/app/chh-web-components/soap-show-hide/soap-show-hide.component.scss
+++ b/src/app/chh-web-components/soap-show-hide/soap-show-hide.component.scss
@@ -2,6 +2,7 @@
 
 .custom-font {
     font-family: 'Inconsolata', monospace;
+    font-size: 18px;
 }
 hr {
     border-top: 1px solid rgba(0, 0, 0, .5) !important;
