--- a/src/app/pages/doctors-information/discharge-instruction-search/discharge-instruction-search.page.html
+++ b/src/app/pages/doctors-information/discharge-instruction-search/discharge-instruction-search.page.html
@@ -26,7 +26,7 @@
           </sup></ion-label
         >
       </ion-segment-button>
-      <ion-segment-button
+      <!--ion-segment-button
         value="P"
         [ngClass]="{'boldMe': selected === 'P'}"
         class="pointer test">
@@ -35,7 +35,7 @@
             ({{prelimCount}})
           </sup></ion-label
         >
-      </ion-segment-button>
+      </ion-segment-button-->
       <ion-segment-button
         value="A"
         [ngClass]="{'boldMe': selected === 'A'}"
