--- a/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.scss
+++ b/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.scss
@@ -1,3 +1,13 @@
 .testletter{
     font-size: 13px;
 }
+
+/* DOES NOT WORK - not specific enough */
+.action-sheet-group {
+    background: #e5e5e5;
+}
+
+/* Works - pass "my-custom-class" in cssClass to increase specificity */
+.my-custom-class .action-sheet-group {
+    background: #e5e5e5;
+}
