--- a/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
@@ -78,7 +78,33 @@
               Notice is saved in HIS.</ion-text
             >
           </ion-item>
-
+          <ion-grid>
+            <ion-row>
+              <ion-col size-md="6" offset-md="3" *ngIf="!isMaStatusSearching"
+                ><ion-button
+                  expand="block"
+                  *ngIf="ma_status == 'F' && !isSaving"
+                  (click)="approveMedicalAbstract()"
+                  >Approve</ion-button
+                ><ion-button
+                  expand="block"
+                  color="warning"
+                  *ngIf="ma_status == 'A' && !isSaving"
+                  (click)="revokeMedicalAbstract()"
+                  >Revoke</ion-button
+                >
+                <ion-button color="mango" *ngIf=" isSaving"
+                  ><ion-spinner></ion-spinner> Saving</ion-button
+                >
+              </ion-col>
+              <ion-col size-md="6" offset-md="3" *ngIf="isMaStatusSearching">
+                <ion-item>
+                  <ion-spinner></ion-spinner>Checking Medical Abstract
+                  Status</ion-item
+                >
+              </ion-col>
+            </ion-row>
+          </ion-grid>
           <ion-button
             id="trigger-button-certificate-signmedabs"
             style="display: none"
