--- a/src/app/pages/doctors-information/discharge-instruction-search/discharge-instruction-search.page.html
+++ b/src/app/pages/doctors-information/discharge-instruction-search/discharge-instruction-search.page.html
@@ -89,7 +89,7 @@
     </ion-refresher-content>
   </ion-refresher>
   <ion-card *ngIf="!isSearching && medicalAbstractList == ''">
-    <ion-item lines="none">No Medical Abstract Found</ion-item>
+    <ion-item lines="none">No Discharge Instruction Found</ion-item>
   </ion-card>
   <div *ngFor="let x of medicalAbstractList">
     <ion-card
