--- a/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/search-medicalabstract/search-medicalabstract.page.html
@@ -10,7 +10,7 @@
     <span class="padding-left-30 font-weight-500 font-size-20">
       &nbsp;&nbsp;Search Medical Abstract
     </span> </ion-toolbar
-  ><ion-item>
+  ><!--ion-item>
     <ion-segment
       [(ngModel)]="selected"
       (ionChange)="changeMode()"
@@ -25,16 +25,6 @@
           </sup></ion-label
         >
       </ion-segment-button>
-      <!--ion-segment-button
-        value="P"
-        [ngClass]="{'boldMe': selected === 'P'}"
-        class="pointer test">
-        <ion-label
-          >Prelim<sup *ngIf="prelimCount >= 1">
-            ({{prelimCount}})
-          </sup></ion-label
-        >
-      </ion-segment-button-->
       <ion-segment-button
         value="A"
         [ngClass]="{'boldMe': selected === 'A'}"
@@ -42,7 +32,7 @@
         <ion-label>Approved</ion-label>
       </ion-segment-button>
     </ion-segment>
-  </ion-item>
+  </ion-item-->
   <div>
     <ion-grid class="ion-no-padding"> </ion-grid>
     <ion-grid class="ion-no-padding chh-darkmode">
@@ -126,14 +116,14 @@
                   <b>Account No. : {{x.account_No}} </b>
                 </p>
               </ion-text>
-              <ion-text *ngIf="x.abstract_Status == 'F'" style="color: RED">
+              <!--ion-text *ngIf="x.abstract_Status == 'F'" style="color: RED">
                 <ion-icon name="pencil-outline"></ion-icon> Requires
                 Approval</ion-text
               >
               <ion-text *ngIf="x.abstract_Status =='A'" color="mango">
                 <ion-icon name="checkmark-done-outline"></ion-icon>
                 Approved</ion-text
-              >
+              -->
             </h2>
           </ion-item>
 
