--- a/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
+++ b/src/app/pages/doctors-information/sign-medicalabstract/sign-medicalabstract.page.html
@@ -8,7 +8,7 @@
       <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
     </span>
     <span class="padding-left-30 font-weight-500 font-size-20">
-      &nbsp;&nbsp;Sign Medical Abstract
+      &nbsp;&nbsp;View Medical Abstract
     </span>
   </ion-toolbar>
   <div>
@@ -78,7 +78,7 @@
               Notice is saved in HIS.</ion-text
             >
           </ion-item>
-          <ion-grid>
+          <!--ion-grid>
             <ion-row>
               <ion-col size-md="6" offset-md="3" *ngIf="!isMaStatusSearching"
                 ><ion-button
@@ -104,7 +104,7 @@
                 >
               </ion-col>
             </ion-row>
-          </ion-grid>
+          </ion-grid-->
           <ion-button
             id="trigger-button-certificate-signmedabs"
             style="display: none"
