--- a/src/app/pages/doctors-information/discharge-instruction/discharge-instruction.page.html
+++ b/src/app/pages/doctors-information/discharge-instruction/discharge-instruction.page.html
@@ -78,7 +78,7 @@
               Notice is saved in HIS.</ion-text
             >
           </ion-item>
-          <ng-container *ngIf="ds_status == 'F' || ds_status == 'A'">
+          <!--ng-container *ngIf="ds_status == 'F' || ds_status == 'A'">
             <ion-button
               expand="block"
               (click)="approveButton()"
@@ -92,7 +92,7 @@
               *ngIf="isApprovedDI && !isUpdating"
               >Revoke Discharge Instruction</ion-button
             ></ng-container
-          >
+          -->
           <ion-button expand="block" *ngIf="isUpdating"
             ><ion-spinner></ion-spinner
           ></ion-button>
